samples/_failures_safe/1761005827_56c611_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63a6ec1d.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_63a6ec1d.c:157:24: error: missing terminating " character
  157 |                 printf("String: \"%s\" at line %d
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63a6ec1d.c:157:17: error: expected expression at end of input
  157 |                 printf("String: \"%s\" at line %d
      |                 ^~~~~~
./samples/SAFE/__tmp_63a6ec1d.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63a6ec1d.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63a6ec1d.c:157:17: error: expected declaration or statement at end of input
